%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1101 &-9056095294137753735
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -3334241872208493215}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.57142854
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-8667027051851250294
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -3334241872208493215}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.78571427
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-8605919645113465532
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 2935673037405940619}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.8
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-7679491118822966386
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -5108859228913930591}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.78571427
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-7315137795421364564
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -1160460754465536537}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.78571427
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-5359459929939234533
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -1160460754465536537}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.78571427
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-5108859228913930591
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: CrawlTimeline
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 3404304066271077675}
  - {fileID: -191566041154123924}
  - {fileID: 537694548803906206}
  - {fileID: -8605919645113465532}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 3ee17141c39463e4ab4c6722522cb905, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-4735999915681292007
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -1160460754465536537}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.7
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-3674572842846633724
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -923728273385166363}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.78571427
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-3406403754954499585
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -3334241872208493215}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.7
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-3334241872208493215
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: WalkTimeline
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 5931118680923053479}
  - {fileID: -7315137795421364564}
  - {fileID: -3674572842846633724}
  - {fileID: 1901013121616154563}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: d959edb8b34214f4582c3ac30955c7d1, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &-1160460754465536537
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: JumpTimeline
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 709581144391135930}
  - {fileID: -9056095294137753735}
  - {fileID: 3779841989465640237}
  - {fileID: -7679491118822966386}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: ab73ddea7ea8e364aa158492216fa05a, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &-923728273385166363
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: ProneTimeline
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 8403504324967840246}
  - {fileID: -8667027051851250294}
  - {fileID: -5359459929939234533}
  - {fileID: 2852218059203978975}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: c8e749f930fa61044b0cbb89f74a0743, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-191566041154123924
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -1160460754465536537}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.8
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Timeline
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: isInIdle
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: isInWalk
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: isInJump
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: isInProne
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: isInCrawl
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 5120836907229560957}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &537694548803906206
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -3334241872208493215}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &709581144391135930
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 2935673037405940619}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.57142854
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &785993292330944335
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -5108859228913930591}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &1901013121616154563
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -5108859228913930591}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.78571427
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &2852218059203978975
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -5108859228913930591}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.78571427
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &2935673037405940619
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: IdleTimeLine
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -3406403754954499585}
  - {fileID: -4735999915681292007}
  - {fileID: 8838622681506763120}
  - {fileID: 785993292330944335}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 00279e5d0e659eb4e9830210c5269078, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &3404304066271077675
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -923728273385166363}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.8
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &3779841989465640237
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -923728273385166363}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.78571427
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1107 &5120836907229560957
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: -3334241872208493215}
    m_Position: {x: -210, y: 190, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 2935673037405940619}
    m_Position: {x: 30, y: 190, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -1160460754465536537}
    m_Position: {x: -330, y: 320, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -923728273385166363}
    m_Position: {x: -80, y: 450, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -5108859228913930591}
    m_Position: {x: 190, y: 320, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 2935673037405940619}
--- !u!1101 &5931118680923053479
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 2935673037405940619}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.78571427
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &8403504324967840246
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 2935673037405940619}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.78571427
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &8838622681506763120
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: isInIdle
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInWalk
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: isInProne
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInJump
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: isInCrawl
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -923728273385166363}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_ExitTime: 0.8
  m_HasExitTime: 0
  m_HasFixedDuration: 0
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
